--- a/Src/Modules/Valuations/Divstack.Company.Estimation.Tool.Valuations.Api/Divstack.Company.Estimation.Tool.Valuations.Api.csproj
+++ b/Src/Modules/Valuations/Divstack.Company.Estimation.Tool.Valuations.Api/Divstack.Company.Estimation.Tool.Valuations.Api.csproj
@@ -2,7 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <RootNamespace>Divstack.Company.Estimation.Tool.Estimations.Api</RootNamespace>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
