--- a/Src/Modules/Valuations/Divstack.Company.Estimation.Tool.Valuations.Application/Divstack.Company.Estimation.Tool.Valuations.Application.csproj
+++ b/Src/Modules/Valuations/Divstack.Company.Estimation.Tool.Valuations.Application/Divstack.Company.Estimation.Tool.Valuations.Application.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.78"/>
