--- a/Src/Shared/Divstack.Company.Estimation.Tool.Shared.Persistance/Divstack.Company.Estimation.Tool.Shared.Persistance.csproj
+++ b/Src/Shared/Divstack.Company.Estimation.Tool.Shared.Persistance/Divstack.Company.Estimation.Tool.Shared.Persistance.csproj
@@ -7,17 +7,12 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
       <PackageReference Include="MongoDB.Bson" Version="2.13.2" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\Divstack.Company.Estimation.Tool.Shared.DDD.ValueObjects\Divstack.Company.Estimation.Tool.Shared.DDD.ValueObjects.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Reference Include="Microsoft.AspNetCore.Http.Abstractions, Version=6.0.0.0, Culture=neutral, PublicKeyToken=adb9793829ddae60">
-        <HintPath>..\..\..\..\..\..\..\..\usr\local\share\dotnet\shared\Microsoft.AspNetCore.App\6.0.0\Microsoft.AspNetCore.Http.Abstractions.dll</HintPath>
-      </Reference>
     </ItemGroup>
 
 </Project>
