--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,9 @@ dotnet: 6.0
 jobs:
   include:
     - stage: build
-    name: "Build .Net 6"
-    script: dotnet restore
-    script: dotnet build
+      name: "Build .Net 6"
+    - script: dotnet restore
+    - script: dotnet build
     - stage: test
       name: "Unit Tests"
       script: dotnet test -v=normal
