--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,11 @@ jobs:
   include:
     - stage: build
       name: "Build .Net 6"
-    - script: dotnet restore
-    - script: dotnet build
+      - script: dotnet restore
+      - script: dotnet build
     - stage: test
       name: "Unit Tests"
-      script: dotnet test -v=normal
+      - script: dotnet test -v=normal
     - stage: deploy
       name: "Deploy to Heroku"
       deploy:
