--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 ﻿language: csharp
 mono: none
 dist: trusty
-dotnet: 6.0
 jobs:
   include:
     - stage: build
       name: "Build .Net 6"
+    - script: sudo snap alias dotnet-sdk.dotnet dotnet
     - script: dotnet restore
     - script: dotnet build
     - stage: test
