--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 ﻿language: csharp
 mono: none
 dist: trusty
-before_install: sudo snap alias dotnet-sdk.dotnet dotnet
+before_install:
+  sudo snap install dotnet-runtime-60 --classic
+  sudo snap alias dotnet-sdk.dotnet dotnet
 jobs:
   include:
     - stage: build
