--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,10 @@
 mono: none
 dist: trusty
 before_install:
-  snap install dotnet-runtime-60 --classic
-  snap alias dotnet-sdk.dotnet dotnet
+  - sudo apt-get update
+  - sudo snap
+  - sudo snap install dotnet-runtime-60 --classic
+  - sudo snap alias dotnet-sdk.dotnet dotnet
 jobs:
   include:
     - stage: build
