--- a/.travis.yml
+++ b/.travis.yml
@@ -2,24 +2,16 @@
 mono: none
 dist: xenial
 dotnet: 6.0
-jobs:
-  include:
-    - allow_failures:
-        - name: "Build .Net 6"
-    - stage: build
-      name: "Build .Net 6"
-    - script: dotnet restore
-              dotnet build
-    - stage: test
-      name: "Unit Tests"
-      script: dotnet test -v=normal
-    - stage: deploy
-      name: "Deploy to Heroku"
-      deploy:
-        provider: heroku
-        api_key: $Heroku__App__Key
-        app: estimation-tool-kb
-        on:
-          branch: develop
-      notifications:
-        slack: estimationtool:$Slack__Key
+install:
+  - dotnet restore
+script:
+  - dotnet build
+  - dotnet test -v=normal
+deploy:
+  provider: heroku
+  api_key: $Heroku__App__Key
+  app: estimation-tool-kb
+  on:
+    branch: develop
+notifications:
+  slack: estimationtool:$Slack__Key
