--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,7 @@ install:
 script:
   - dotnet build
   - dotnet test -v=normal
-#  - sonar-scanner -X
-  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar -Dsonar.projectKey=kamilbaczek_Estimation-Tool
+  - sonar-scanner -X
 
 
 deploy:
