--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,12 +1,7 @@
 sonar.projectKey=kamilbaczek_Estimation-Tool
 sonar.organization=kamilbaczek
 
-# This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=Estimation-Tool
-#sonar.projectVersion=1.0
-
-# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=.
-
-# Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
+sonar.language=cs
+sonar.sourceEncoding=UTF-8
+sonar.verbose=true
+sonar.exclusions=**/*.html
