--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,21 +1,47 @@
-name: CI
+name: Build
 on:
   push:
-    branches: [ develop ]
+    branches:
+      - develop
   pull_request:
-    branches: [ develop ]
-
-  workflow_dispatch:
-
+    types: [opened, synchronize, reopened]
 jobs:
-  test:
-    runs-on: ubuntu-latest
+  build:
+    name: Build
+    runs-on: windows-latest
     steps:
-      - name: Valuations Domain Tests
-        uses: zyborg/dotnet-tests-report@v1
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
         with:
-          report_name: valuations_domain_project_tests
-          report_title: Valuations Domain Tests
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          project_path: /home/runner/work/Estimation-Tool/Estimation-Tool/home/runner/work/Estimation-Tool/Estimation-Tool/Divstack.Company.Estimation.Tool.sln
-
+          java-version: 1.11
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - name: Cache SonarCloud packages
+        uses: actions/cache@v1
+        with:
+          path: ~\sonar\cache
+          key: ${{ runner.os }}-sonar
+          restore-keys: ${{ runner.os }}-sonar
+      - name: Cache SonarCloud scanner
+        id: cache-sonar-scanner
+        uses: actions/cache@v1
+        with:
+          path: .\.sonar\scanner
+          key: ${{ runner.os }}-sonar-scanner
+          restore-keys: ${{ runner.os }}-sonar-scanner
+      - name: Install SonarCloud scanner
+        if: steps.cache-sonar-scanner.outputs.cache-hit != 'true'
+        shell: powershell
+        run: |
+          New-Item -Path .\.sonar\scanner -ItemType Directory
+          dotnet tool update dotnet-sonarscanner --tool-path .\.sonar\scanner
+      - name: Build and analyze
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        shell: powershell
+        run: |
+          .\.sonar\scanner\dotnet-sonarscanner begin /k:"kamilbaczek_Estimation-Tool" /o:"kamilbaczek" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
+          <insert_your_clean_build_command>
+          .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
