Continue work on code coverage

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ script:
   - dotnet new tool-manifest && dotnet tool install dotnet-reportgenerator-globaltool
   - dotnet build
   - dotnet test -v=normal --collect:"XPlat Code Coverage"
-  - dotnet reportgenerator "-reports:**\coverage.cobertura.xml" "-targetdir:${TRAVIS_BUILD_DIR}\coverage\Reports" -tag:${TRAVIS_BUILD_NUMBER} "-reporttypes:HTMLInline;HTMLChart;SonarQube"
+  - dotnet reportgenerator "-reports:${TRAVIS_BUILD_DIR}\**\coverage.cobertura.xml" "-targetdir:${TRAVIS_BUILD_DIR}\coverage\Reports" -tag:${TRAVIS_BUILD_NUMBER} "-reporttypes:HTMLInline;HTMLChart;SonarQube"
   - sonar-scanner -Dsonar.projectVersion=${TRAVIS_BUILD_NUMBER} -Dsonar.coverageReportPaths=${TRAVIS_BUILD_DIR}\coverage\Reports
 
 deploy:
