--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ addons:
 
 install:
   - dotnet restore
-  - dotnet new tool-manifest && dotnet tool install --global dotnet-reportgenerator-globaltool
+  - dotnet new tool-manifest && dotnet tool install --global dotnet-reportgenerator-globaltool && dotnet tool install --global dotnet-sonarscanner
 script:
   - dotnet sonarscanner begin /d:sonar.login="$SONAR_TOKEN" /d:sonar.projectVersion=${TRAVIS_BUILD_NUMBER} /d:sonar.cs.opencover.reportsPaths="**\TestResults\*\*.xml" /d:sonar.exclusions=**/*.html /k:"kamilbaczek_Estimation-Tool"
   - dotnet build
