--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ addons:
 install:
   - dotnet restore
   - dotnet new tool-manifest && dotnet tool install --global dotnet-reportgenerator-globaltool && dotnet tool install --global dotnet-sonarscanner
+before_script:
+  - export PATH="$PATH:$HOME/.dotnet/tools"
 script:
   - dotnet sonarscanner begin /d:sonar.login="$SONAR_TOKEN" /d:sonar.projectVersion=${TRAVIS_BUILD_NUMBER} /d:sonar.cs.opencover.reportsPaths="**\TestResults\*\*.xml" /d:sonar.exclusions=**/*.html /k:"kamilbaczek_Estimation-Tool"
   - dotnet build
