--- a/Src/Modules/Emails/Divstack.Company.Estimation.Tool.Emails.Payments/emails-payments-appsettings.json
+++ b/Src/Modules/Emails/Divstack.Company.Estimation.Tool.Emails.Payments/emails-payments-appsettings.json
@@ -3,5 +3,9 @@
     "Subject": "Payment",
     "PaymentUrl": "http://localhost:8080/payments/pay/{PaymentId}",
     "PathToTemplate": "PaymentInitialized/Templates/payment_initialized.html"
+  },
+  "PaymentCompletedMailConfiguration": {
+    "Subject": "Payment Completed",
+    "PathToTemplate": "PaymentInitialized/Templates/payment_completed.html"
   }
 }
