--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,4 +4,4 @@ sonar.organization=kamilbaczek
 sonar.language=cs
 sonar.sourceEncoding=UTF-8
 sonar.verbose=false
-sonar.exclusions=**/*.html
+sonar.exclusions=**/*.html, Documentation
