--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_script:
 script:
   - dotnet sonarscanner begin /o:"kamilbaczek" /d:sonar.login="$SONAR_TOKEN" /v:"${TRAVIS_BUILD_NUMBER}" /d:sonar.cs.opencover.reportsPaths="**\TestResults\*\*.xml" /d:sonar.exclusions=**/*.html /k:"kamilbaczek_Estimation-Tool"
   - dotnet build
-  - dotnet test -v=normal --collect:"XPlat Code Coverage" -- DataCollectionRunSettings.DataCollectors.DataCollector.Configuration.Format=opencover
+  - dotnet test Src\Modules\Inquiries\Tests\Divstack.Company.Estimation.Tool.Inquiries.Domain.Tests -v=normal --collect:"XPlat Code Coverage" -- DataCollectionRunSettings.DataCollectors.DataCollector.Configuration.Format=opencover
   - dotnet sonarscanner end /d:sonar.login="$SONAR_TOKEN"
 deploy:
   provider: heroku
@@ -27,3 +27,5 @@ notifications:
   slack: estimationtool:$Slack__Key
 git:
   depth: false
+  
+  
