--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,20 +18,16 @@ jobs:
     - uses: actions/setup-dotnet@v1
       with:
         dotnet-version: '6.x' # SDK Version to use.
+    - name: Install sonarscanner-dotnet
+      run: dotnet new tool-manifest && dotnet tool install --global dotnet-sonarscanner
     - name: Get coverage
-      run: dotnet test Src/Modules/Inquiries/Tests/Divstack.Company.Estimation.Tool.Inquiries.Domain.Tests -v=normal --collect:"XPlat Code Coverage" -- DataCollectionRunSettings.DataCollectors.DataCollector.Configuration.Format=opencover
+      run: 
     - name: Sonarscanner for dotnet
-      uses: Secbyte/dotnet-sonarscanner@v2.3
-      with:
-        buildCommand: dotnet build .
-        testCommand: dotnet test .
-        projectKey: kamilbaczek_Estimation-Tool
-        projectName: Estimation-Tool
-        sonarOrganisation: kamilbaczek
-        beginArguments: >
-            /d:sonar.verbose="false"
-            /d:sonar.cs.opencover.reportsPaths="**/TestResults/*/*.xml"
-#            /d:sonar.coverage.exclusions='"**/*.cs","**/*.md"'
+      run: |
+           dotnet sonarscanner begin /o:"kamilbaczek" /d:sonar.login="$SONAR_TOKEN" /d:sonar.cs.opencover.reportsPaths="**/TestResults/*/*.xml" /d:sonar.exclusions=**/*.html /k:"kamilbaczek_Estimation-Tool"
+           dotnet build
+           dotnet test Src/Modules/Inquiries/Tests/Divstack.Company.Estimation.Tool.Inquiries.Domain.Tests -v=normal --collect:"XPlat Code Coverage" -- DataCollectionRunSettings.DataCollectors.DataCollector.Configuration.Format=opencover
+           dotnet sonarscanner end /d:sonar.login="$SONAR_TOKEN"
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
