Github actions add dotnet 6 installation

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
       run: dotnet new tool-manifest && dotnet tool install --global dotnet-sonarscanner
     - name: Sonarscanner for dotnet
       run: |
-           dotnet sonarscanner begin /o:"kamilbaczek" /d:sonar.login="$SONAR_TOKEN" /d:sonar.cs.opencover.reportsPaths="**/TestResults/*/*.xml" /d:sonar.exclusions=**/*.html /k:"kamilbaczek_Estimation-Tool"
+           dotnet sonarscanner begin /o:"kamilbaczek" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login="$SONAR_TOKEN" /d:sonar.cs.opencover.reportsPaths="**/TestResults/*/*.xml" /d:sonar.exclusions=**/*.html /k:"kamilbaczek_Estimation-Tool"
            dotnet build
            dotnet test Src/Modules/Inquiries/Tests/Divstack.Company.Estimation.Tool.Inquiries.Domain.Tests -v=normal --collect:"XPlat Code Coverage" -- DataCollectionRunSettings.DataCollectors.DataCollector.Configuration.Format=opencover
            dotnet sonarscanner end /d:sonar.login="$SONAR_TOKEN"
