--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Sonarscanner for dotnet
       run: |
            dotnet test Src/Modules/Inquiries/Tests/Divstack.Company.Estimation.Tool.Inquiries.Domain.Tests -v=normal --collect:"XPlat Code Coverage" -- DataCollectionRunSettings.DataCollectors.DataCollector.Configuration.Format=opencover
-           dotnet sonarscanner begin /o:"kamilbaczek" /d:sonar.dotnet.visualstudio.testProjectPattern="*Tests;*UnitTests" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login="$SONAR_TOKEN" /d:sonar.cs.opencover.reportsPaths="**/TestResults/*/*.xml" /d:sonar.exclusions=**/*.html /key:"kamilbaczek_Estimation-Tool"
+           dotnet sonarscanner begin /d:sonar.language=cs /o:"kamilbaczek" /d:sonar.dotnet.visualstudio.testProjectPattern="*Tests;*UnitTests" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login="$SONAR_TOKEN" /d:sonar.cs.opencover.reportsPaths="**/TestResults/*/*.xml" /d:sonar.exclusions=**/*.html /key:"kamilbaczek_Estimation-Tool"
            dotnet build
            dotnet test 
            dotnet sonarscanner end /d:sonar.login="$SONAR_TOKEN"
