--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,4 +35,5 @@ jobs:
         heroku_api_key: ${{secrets.HEROKU}}
         heroku_app_name: "estimation-tool-kb"
         usedocker: true
+        appdir: "."
 
