--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,5 @@ jobs:
       with:
         heroku_api_key: ${{secrets.HEROKU}}
         heroku_app_name: "estimation-tool-kb"
-        usedocker: true
-        appdir: "."
+        branch: "develop"
 
