--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,14 +21,30 @@ jobs:
     - uses: actions/setup-dotnet@v1
       with:
         dotnet-version: '6.x' # SDK Version to use.
-    - name: Install sonarscanner-dotnet
-      run: dotnet new tool-manifest && dotnet tool install --global dotnet-sonarscanner
     - name: Sonarscanner for dotnet
       run: |
            dotnet test --settings coverlet.runsettings --logger:trx
-           dotnet sonarscanner begin /d:sonar.scm.provider=git /v:1.${{ github.run_number }} /d:sonar.language=cs /o:"kamilbaczek" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login="$SONAR_TOKEN" /d:sonar.exclusions=**/*.html /key:"kamilbaczek_Estimation-Tool" /d:sonar.cs.opencover.reportsPaths="**/coverage.opencover.xml" /d:sonar.cs.vstest.reportsPaths="**/*.trx"
            dotnet build
-           dotnet sonarscanner end /d:sonar.login="$SONAR_TOKEN"
+    - name: Analyze with SonarCloud
+      uses: sonarsource/sonarcloud-github-action@master
+        with:
+            projectBaseDir: my-custom-directory
+            args: >
+            -Dsonar.organization=kamilbaczek
+            -Dsonar.projectKey=$SONAR_TOKEN
+            -Dsonar.cs.opencover.reportsPaths=**/coverage.opencover.xml
+            -Dsonar.cs.vstest.reportsPaths=**/*.trx
+            -Dsonar.host.url=https://sonarcloud.io
+            -Kkamilbaczek_Estimation-Tool
+            -V1.${{ github.run_number }}
+#    - name: Install sonarscanner-dotnet
+#      run: dotnet new tool-manifest && dotnet tool install --global dotnet-sonarscanner
+#    - name: Sonarscanner for dotnet
+#      run: |
+#           dotnet test --settings coverlet.runsettings --logger:trx
+#           dotnet sonarscanner begin /d:sonar.scm.provider=git /v:1.${{ github.run_number }} /d:sonar.language=cs /o:"kamilbaczek" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login="$SONAR_TOKEN" /d:sonar.exclusions=**/*.html /key:"kamilbaczek_Estimation-Tool" /d:sonar.cs.opencover.reportsPaths="**/coverage.opencover.xml" /d:sonar.cs.vstest.reportsPaths="**/*.trx"
+#           dotnet build
+#           dotnet sonarscanner end /d:sonar.login="$SONAR_TOKEN"
 #    - name: Heroku deployment
 #      uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
 #      with:
