--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,9 +34,7 @@ jobs:
             -Dsonar.projectKey=$SONAR_TOKEN
             -Dsonar.cs.opencover.reportsPaths=**/coverage.opencover.xml
             -Dsonar.cs.vstest.reportsPaths=**/*.trx
-            -Dsonar.host.url=https://sonarcloud.io
-            -Kkamilbaczek_Estimation-Tool
-            -V1.${{ github.run_number }}
+            -Dsonar.projectVersion=1.${{ github.run_number }}
 #    - name: Install sonarscanner-dotnet
 #      run: dotnet new tool-manifest && dotnet tool install --global dotnet-sonarscanner
 #    - name: Sonarscanner for dotnet
