--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,6 +37,7 @@ jobs:
        -Dsonar.login=${{ secrets.SONAR_TOKEN }}
        -Dsonar.organization=kamilbaczek
        -Dsonar.projectKey=kamilbaczek_Estimation-Tool
+       -Dsonar.language=cs
        -Dsonar.host.url=https://sonarcloud.io/
        -Dsonar.exclusions=**/*.html
        -Dsonar.cs.opencover.reportsPaths=**/coverage.opencover.xml
