--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Sonarscanner for dotnet
       run: |
            dotnet test --settings coverlet.runsettings --logger:trx
-           dotnet sonarscanner begin /d:sonar.sources="./Src/**" /d:sonar.tests="**/Tests/**" /d:sonar.verbose=true /v:1.${{ github.run_number }} /d:sonar.language=cs /o:"kamilbaczek" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login="$SONAR_TOKEN" /d:sonar.exclusions=**/*.html /key:"kamilbaczek_Estimation-Tool" /d:sonar.cs.opencover.reportsPaths="**/coverage.opencover.xml" /d:sonar.cs.vstest.reportsPaths="**/*.trx"
+           dotnet sonarscanner begin /d:sonar.test.exclusions="./Src/**" /d:sonar.tests.inclusions="**/Tests/**" /d:sonar.verbose=true /v:1.${{ github.run_number }} /d:sonar.language=cs /o:"kamilbaczek" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login="$SONAR_TOKEN" /d:sonar.exclusions=**/*.html /key:"kamilbaczek_Estimation-Tool" /d:sonar.cs.opencover.reportsPaths="**/coverage.opencover.xml" /d:sonar.cs.vstest.reportsPaths="**/*.trx"
            dotnet build
            dotnet sonarscanner end /d:sonar.login="$SONAR_TOKEN"
 
