--- a/Src/Modules/Divstack.Company.Estimation.Tool.Notifications.Push.Valuations.Api/Divstack.Company.Estimation.Tool.Notifications.Push.Valuations.Api.csproj
+++ b/Src/Modules/Divstack.Company.Estimation.Tool.Notifications.Push.Valuations.Api/Divstack.Company.Estimation.Tool.Notifications.Push.Valuations.Api.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
       <PackageReference Include="MediatR" Version="9.0.0" />
+      <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
       <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
       <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.3" />
       <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
